--- a/style.css
+++ b/style.css
@@ -3,3 +3,32 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+img.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+nav > a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+figcaption {
+  text-align: center;
+  font-size: smaller;
+}
+#featured-property > p {
+  width: 800px;
+  margin-top: 25px;
+  text-align: center;
+}
+#details > div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
